--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <title>Carosello</title>
 </head>
-<body>
+<body class="vh-100 d-flex justify-content-center align-items-center">
+
+  <section>
+    <div class="carousel">
+
+      <!-- Parte con Slide -->
+      <div class="slide">
+        <img src="./img/01.jpg" alt="">
+      </div>
+
+      <!-- Parte con pulsanti freccia -->
+      <div class="arrow w-100 d-flex justify-content-between">
+        <i class="arrow-left fa-solid fa-angle-left"></i>
+        <i class="arrow-right fa-solid fa-angle-right "></i>
+      </div>
+    </div>
+  </section>
   
   <script src="./js/script.js"></script>
 </body>
