--- a/index.html
+++ b/index.html
@@ -15,14 +15,30 @@
     <div class="carousel">
 
       <!-- Parte con Slide -->
-      <div class="slide">
+      <div class="slide active">
         <img src="./img/01.jpg" alt="">
+      </div>
+
+      <div class="slide">
+        <img src="./img/02.jpg" alt="">
+      </div>
+
+      <div class="slide">
+        <img src="./img/03.jpg" alt="">
+      </div>
+
+      <div class="slide">
+        <img src="./img/04.jpg" alt="">
+      </div>
+
+      <div class="slide">
+        <img src="./img/05.jpg" alt="">
       </div>
 
       <!-- Parte con pulsanti freccia -->
       <div class="arrow w-100 d-flex justify-content-between">
-        <i class="arrow-left fa-solid fa-angle-left"></i>
-        <i class="arrow-right fa-solid fa-angle-right "></i>
+        <i id="arrow-left" class="arrow-left fa-solid fa-angle-left"></i>
+        <i id="arrow-right" class="arrow-right fa-solid fa-angle-right "></i>
       </div>
     </div>
   </section>
