--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body class="vh-100 d-flex justify-content-center align-items-center">
 
   <section>
-    <div class="carousel">
+    <div id="carousel" class="carousel">
 
       <!-- Parte con Slide -->
-      <div class="slide active">
+
+      <!-- <div class="slide active">
         <img src="./img/01.jpg" alt="">
       </div>
 
@@ -33,7 +34,8 @@
 
       <div class="slide">
         <img src="./img/05.jpg" alt="">
-      </div>
+      </div> -->
+
 
       <!-- Parte con pulsanti freccia -->
       <div class="arrow w-100 d-flex justify-content-between">
