--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -45,6 +45,6 @@
     </div>
   </section>
   
-  <script src="./js/script.js"></script>
+  <script src="./js/carosello-array.js"></script>
 </body>
 </html>
